fixed spacing of projects

--- a/benlottes-react-app/src/App.css
+++ b/benlottes-react-app/src/App.css
@@ -103,7 +103,7 @@ p {
   justify-content: center;
   align-items: center;
   height: 80vh;
-  gap: 80px;
+  gap: 40px;
 }
 
 .bio-align{
